tests/neg/i9294.scala
@foo class foo[X] // error // error
